--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,4 +1,20 @@
 .imageRow {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+
+.styleImageChoice {
+    cursor: pointer;
+    z-index: 10;
+    text-align: center;
+}
+
+.styleImage {
+    height: 250px;
+    width: 400x;
+    margin: 25px;
+    border: 5px solid white;
 }
