--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -14,7 +14,12 @@
 
 .styleImage {
     height: 250px;
-    width: 400x;
     margin: 25px;
     border: 5px solid white;
+}
+
+.alignPhotoText {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
