edited button corners

--- a/src/ExampleButton.css
+++ b/src/ExampleButton.css
@@ -17,14 +17,18 @@
     text-decoration: none;
     background-color: #EDAFB8;
     border: solid #EDAFB8;
+    border-radius: 5px;
     padding: 10px;
     color: white;
+    font-weight: bold;
 }
 
 .CTAButton:hover {
     background-color: white;
     text-decoration: solid;
+    border-radius: 5px;
     padding: 10px;
     border: solid #EDAFB8;
     color: #EDAFB8;
+    font-weight: bold;
 }
